# semesterprojekt2

./: .gitignore  README.md  go.work  go.work.sum  guide.md  quartus_ii_fpga_keypad.qar  rtncodegen  semesterprojekt2.code-workspace  sendData X20 test.dwf3work
LockApp/: App.tsx  IMPORTANTSHIT.MD  index.js  package-lock.json  package.json  storage.ts
LockApp/bluetooth/: constants.ts  exchange.ts
LockApp/components/: Bluetooth.tsx  Lock.tsx  Locked.tsx  Screen.tsx
LockApp/csr/: csr.ts
LockApp/grpc/: buf.gen.yaml  client.ts  fuckYouReactNative.ts
LockApp/model/: identity.ts
LockApp/pages/: Authenticated.tsx  Home.tsx  Onboarding.tsx  Pair.tsx
RTNCertificateManager/: README.md  package.json  rtn-certificate-manager.podspec
RTNCertificateManager/android/: build.gradle
RTNCertificateManager/ios/: RTNCertificateManager.h  RTNCertificateManager.mm
RTNCertificateManager/js/: NativeCertificateManager.ts
app/: app.json  package.json
app/android/: settings.gradle
app/ios/: Podfile
arduino/: guide.md
arduino/control/: platformio.ini
arduino/logging/: logging.c++  logging.h
arduino/proxy/: platformio.ini
bluetooth-web-tester/: index.html  package-lock.json  package.json
cert/: ca-cert.pem  ca-cert.srl  ca-key.pem  client-cert.pem  client-key.pem  client-req.pem  generate.sh  server-cert.pem  server-key.pem  server-req.pem
proto/: buf.gen.yaml  buf.yaml  generate.sh  go.mod  go.sum  package.json  proto.md
servers/: .gitignore  go.mod  go.sum  piupload
servers/bridge/bluetooth/: Cargo.toml  bluetooth.go
servers/bridge/bluetooth/src/: main.rs
(+149 files in other folders)
