[package]
name = "bluetooth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
env_logger = "0.10.0"
dbus = {version = "0.9.7", features = ["vendored"]}
futures-util = "0.3"
futures = "0.3"
uuid = "1.3.0"





[build-dependencies]

